Revision history for Weather::Meteo

0.03
	Remove unused modules

0.02	Tue Feb 28 11:57:35 EST 2023
	Remove references left from the template code
	Added all my basic testing

0.01	Tue Feb 28 11:16:18 EST 2023
        First draft